# overlook

./: Cargo.toml  README.md  flake.nix
src/: colour.rs  fade.rs  main.rs  maze.rs  state.rs  walk.rs
src/generate/: aldous_broder.rs  dfs.rs  kruskal.rs  mod.rs  prim.rs  wilson.rs
src/solve/: a_star.rs  flood.rs  mod.rs  mouse.rs  right_hand.rs
